# sidneysatorus

./: .gcloudignore  .gitignore  CLAUDE.md  README.md  backup.sql  cloudbuild.yaml  docker-compose.yml  index.html  package-lock.json  tsconfig.json
backend/: .env.example  .gitignore  Dockerfile  plan.md  pyproject.toml  pytest.ini  requirements.txt  run.py
backend/prisma/: README.md  schema.prisma
backend/prisma/migrations/20260327164526_init/: migration.sql
backend/prisma/migrations/20260327170000_rename_supabase_id_to_firebase_uid/: migration.sql
backend/prisma/migrations/20260408000000_chat_session_v2/: migration.sql
backend/prisma/migrations/20260409000000_message_type_report_ref/: migration.sql
backend/prompts/: legacy_report_user_instructions.md  system_prompt.md
backend/scripts/: build_mbfc_cache.py  build_rsf_cache.py  generate_coutry_reports.py
backend/src/: auth.py  config.py  deps.py  main.py  storage.py  storage_factory.py
backend/src/agents/: __init__.py  a2a_config.py  a2a_servers.py  run_tests.sh
backend/src/agents/analyzer/: __init__.py  agent.py
backend/src/agents/coordinator/: __init__.py  agent.py
backend/src/agents/reporter/: README.md  __init__.py  agent.py  tools.py
backend/src/agents/searcher/: __init__.py  agent.py
backend/src/api/: cases.py  investigate.py  main.py  quick_search.py  report.py  routes.py  sessions.py  user.py  workspace.py
backend/src/data/: __init__.py  cache.py  factory.py  relational.py  search.py  vector.py
backend/src/graph/: agents.py  flow.py  middleware.py
backend/src/graph/grading/: __init__.py  attribution.py  config.py  corroboration.py  data_loaders.py  grader.py  signals.py
backend/src/graph/tools/: asknews.py  (+3 more)
backend/src/lib/: geo_code.py
backend/src/models/: report.py
backend/src/routers/: case_files.py
backend/src/scripts/: country_report_generator.py  opoint.py  scraper.py
backend/src/service/: auth.py  chat_session_service.py  db.py  investigate_runner.py  investigate_service.py  storage.py  tenants.py
backend/src/services/: investigator.py
backend/tests/: test_data_factory.py  test_e2e_report_pipeline.py  test_gcs_report_push.py  test_research_subagent.py  test_storage_factory.py
(+110 files in other folders)
