[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sidney-backend"
version = "1.0.0"
description = "Sidney OSINT Investigation Backend API"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.22",
    # LangChain + LangGraph
    "langchain>=0.3.28",
    "langchain-openai>=0.3.35",
    "langchain-anthropic>=0.3.22",
    "langgraph>=0.2.76",
    "deepagents==0.4.7",
    # Database
    "prisma>=0.11.0",
    # Auth
    "PyJWT>=2.9.0",
    "jwcrypto>=1.5.0",
    "cryptography>=46.0.0",
    # Google Cloud
    "firebase-admin>=7.1.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.3.0",
    "google-cloud-storage>=2.18.2",
    "google-genai>=1.56.0",
    "google>=3.0.0",
    # HTTP
    "slowapi>=0.1.9",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    # Data / validation
    "email-validator>=2.3.0",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.5.2",
    # Utilities
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2",
    "tenacity>=9.1.2",
    "tomlkit>=0.14.0",
    # NLP
    "spacy>=3.8.11",
    # Document generation
    "reportlab>=4.2.5",
    "weasyprint>=63.0",
    "markdown>=3.10.1",
    "Jinja2>=3.1.6",
    # Browser automation
    "playwright>=1.48.0",
    "beautifulsoup4>=4.13.4",
    # AG-UI
    "ag-ui-protocol>=0.1.10,<0.2",
    "google>=3.0.0",
    # Archivenow
    "archivenow==2020.7.18.12.19.44",
    "archive>=0.3",
    "python-docx>=1.2.0",
    "font-hanken-grotesk>=0.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
